--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -229,10 +229,10 @@
             return false;
         }
 
-        if (answer.length < 2) {
-            alert('密保答案太短，请重新输入');
-            return false;
-        }
+<!--        if (answer.length < 2) {-->
+<!--            alert('密保答案太短，请重新输入');-->
+<!--            return false;-->
+<!--        }-->
 
         return true;
     }
